--- a/src/style.css
+++ b/src/style.css
@@ -1,332 +1,3 @@
-* {
-  box-sizing: border-box;
-  color: #333;
-}
-
-body {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  margin: 0;
-  background-color: #81a69b;
-  background-image: url(https://pets-images.dev-apis.com/pets/wallpaperB.jpg);
-}
-
-.search-params {
-  width: 1100px;
-  margin: 0 auto;
-}
-
-.search-params form {
-  float: left;
-  width: 360px;
-  padding: 35px 15px 15px 15px;
-  margin: 0 25px 0 0;
-  background: #faeff0;
-  border-radius: 6px;
-  box-shadow: 0 0 12px #aaa, -0px -0px 12px #fff;
-}
-
-.search {
-  float: left;
-  width: 715px;
-  padding: 15px;
-  margin-bottom: 25px;
-  background: #faeff0;
-  border-radius: 6px;
-  box-shadow: 0 0 12px #aaa, -0px -0px 12px #fff;
-}
-
-.details {
-  width: 1100px;
-  padding: 15px;
-  margin: 0 auto 25px;
-  background: #faeff0;
-  border-radius: 6px;
-  box-shadow: 0 0 12px #aaa, -0px -0px 12px #fff;
-}
-
-.pet {
-  height: 130px;
-  width: 100%;
-  margin: 25px 0;
-  display: block;
-  border-bottom: #333 2px solid;
-  overflow: hidden;
-}
-
-.pet img {
-  width: 100px;
-  min-height: 100px;
-}
-
-.info {
-  float: left;
-  width: 80%;
-  height: 100px;
-  padding-top: 10px;
-  flex-direction: column;
-  justify-content: space-around;
-}
-
-.image-container {
-  float: left;
-  height: 100px;
-  width: 100px;
-  margin: 0 20px 0 10px;
-  clip-path: circle(50% at 50% 50%);
-}
-
-.pet h1 {
-  color: #333;
-  font-size: 30px;
-  font-weight: normal;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  width: 95%;
-  margin: 0;
-  overflow: hidden;
-}
-
-header > a,
-#root > div > h1 {
-  display: inline-block;
-  text-indent: -9999px;
-  height: 76px;
-  width: 279px;
-  margin: 20px 0;
-  background-image: url(https://static.frontendmasters.com/resources/2019-05-02-complete-intro-react-v5/image-logo.png);
-  filter: brightness(150%);
-  overflow: hidden;
-}
-
-.pet h2 {
-  font-size: 20px;
-  font-weight: normal;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  margin: 0;
-}
-
-header a {
-  color: #333;
-  font-size: 3px;
-  font-weight: bold;
-  text-decoration: none;
-  display: block;
-  padding-bottom: 10px;
-}
-
-header {
-  width: 1100px;
-  padding: 20px 0 0 0;
-  margin: 0 auto;
-  display: flex;
-  align-content: center;
-  justify-content: center;
-}
-
-.details p {
-  line-height: 1.5;
-  padding: 0 15px;
-}
-
-.details h1 {
-  color: #333;
-  font-size: 60px;
-  text-align: center;
-  margin: 5px 0;
-}
-
-.details h2 {
-  text-align: center;
-  margin: 5px 0 20px 0;
-}
-
-.carousel {
-  height: 400px;
-  margin-top: 8px;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-}
-
-.carousel > img {
-  max-height: 400px;
-  max-width: 45%;
-}
-
-.carousel-smaller {
-  width: 50%;
-}
-
-.carousel-smaller > img {
-  height: 100px;
-  width: 100px;
-  margin: 15px;
-  display: inline-block;
-  border-radius: 50%;
-  border: 2px solid #333;
-  cursor: pointer;
-}
-
-.carousel-smaller > img.active {
-  opacity: 0.6;
-  border-color: #333;
-}
-
-.search-params label {
-  width: 60px;
-  display: block;
-}
-
-.search-params input,
-.search-params select {
-  font-size: 18px;
-  height: 30px;
-  width: 325px;
-  margin-bottom: 30px;
-}
-
-.search-params button,
-#modal button,
-#modal a,
-.details button {
-  color: white;
-  font-size: 18px;
-  padding: 5px 25px;
-  margin: 0 auto;
-  display: block;
-  background-color: #ad343e;
-  border: #333 1px solid;
-  border-radius: 5px;
-  cursor: pointer;
-}
-
-#modal a {
-  text-decoration: none;
-  margin-right: 15px;
-  display: inline-block;
-}
-
-.search-params button:hover {
-  background-color: #122622;
-}
-
-.search-params button:active {
-  background-color: #5f1d22;
-}
-
-.search-params button:focus {
-  border: 1px solid cornflowerblue;
-}
-
-#modal {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  top: 0;
-  z-index: 10;
-  background-color: rgba(0, 0, 0, 0.9);
-}
-
-#modal:empty {
-  display: none;
-}
-
-#modal > div {
-  text-align: center;
-  max-width: 500px;
-  padding: 15px;
-  background: #faeff0;
-  border-radius: 30px;
-}
-
-#modal .buttons button {
-  margin-right: 15px;
-  display: inline-block;
-}
-
-@media only screen and (max-width: 1129px) {
-  header {
-    width: 95%;
-    padding: 20px 0 0 0;
-    margin: 0 auto;
-    display: flex;
-    align-content: center;
-    justify-content: center;
-  }
-
-  .search-params {
-    width: 95%;
-  }
-
-  .search-params form {
-    margin-bottom: 20px;
-  }
-
-  .search {
-    float: left;
-    width: 55%;
-    padding: 15px;
-    margin-bottom: 25px;
-    border-radius: 9px;
-  }
-
-  .details {
-    width: 95%;
-    padding: 15px;
-    margin: 0 auto 25px;
-    border-radius: 9px;
-  }
-
-  .info {
-    width: 65%;
-  }
-
-  .info h1 {
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    width: 100%;
-    overflow: hidden;
-  }
-
-  .info h2 {
-    white-space: nowrap;
-    text-overflow: ellipsis;
-    width: 100%;
-    overflow: hidden;
-  }
-}
-
-@media only screen and (max-width: 945px) {
-  .search-params {
-    width: 95%;
-  }
-
-  .search {
-    width: 100%;
-  }
-}
-
-@media only screen and (max-width: 600px) {
-  .pet {
-    height: 200px;
-  }
-
-  .info {
-    text-align: center;
-    width: 100%;
-  }
-
-  .image-container {
-    float: none;
-    margin: 0 auto;
-  }
-  .carousel-smaller > img {
-    height: 60px;
-    width: 60px;
-  }
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
